新增：项目文档 修改：查账模块订单状态 修改：筛选弹框不能滚动、全选单选不合理问题 修改：盘点记录正负细节样式，盘点不能盘0和负数问题

--- a/doc/项目文档.md
+++ b/doc/项目文档.md
@@ -6,16 +6,16 @@
 
 项目主要使用了[react](https://react.docschina.org/)，[taro框架](https://taro.jd.com/)开发
 
-同时也使用了[redux](https://www.redux.org.cn/)，[react-redux](https://www.redux.org.cn/docs/react-redux/)，[Antd组件库](https://mobile.ant.design/index-cn/)
+同时也使用了[redux](https://www.redux.org.cn/)，[react-redux](https://www.redux.org.cn/docs/react-redux/)，[taro-ui组件库](https://taro-ui.jd.com/#/)
 
 
 
 ## 构建与部署
 
 ```bash
-npm i			# 下载依赖包
-npm start		# 运行项目
-npm run build	# 编译项目
+npm i				# 下载依赖包
+npm start			# 运行项目
+npm run build:weapp	# 编译项目
 ```
 
 可能会出现的问题，由于taro版本太高导致编译不成功，降低版本即可解决
@@ -34,10 +34,10 @@ npm install -g @tarojs/cli@1.3.14
 config				# webpack配置
 src
 ├──	assets			# 图片文件夹
-├──	commom
+├──	commom			# 全局通用文件夹
 │   ├──	request		# 接口请求工具
-│   ├──	sdk			# 
-│   └──	util		# 工具
+│   ├──	sdk			# 全局通用sdk方法
+│   └──	util		# 全局通用方法
 ├──	components		# 组件
 ├──	constants		# api
 ├──	actions			# redux中的相关异步操作在这里进行
@@ -56,3 +56,652 @@ src
 
 在pages文件夹下创建对应模块文件夹以及文件，完成之后在app.tsx声明路径即可
 
+
+
+### 分页加载
+
+首先我们需要定义默认页（1）和一次加载的数量（20）。
+
+页面加载时，去请求第一页的数据。
+
+我们在使用scrollView的时候，同时会支持上拉加载，下拉刷新。需要定义两个state，避免重复的加载。
+
+```tsx
+let pageNum: number = 1
+const pageSize: number = 20
+
+state: State = {
+  loading: false,
+  refreshing: false,
+};
+
+public submit = async (page?: number) => {
+  try {
+    const currentPage = typeof page === "number" ? page : pageNum;
+    // 只有page = 1 时才会下拉刷新
+    if (currentPage === 1) {
+      this.resetScrollTop(0)
+      if (this.state.refreshing === true) {
+        return;
+      }
+      this.setState({refreshing: true});
+    } 
+    // 只要可以上拉刷新，page一定不等于1
+    else {
+      if (this.state.loading === true) {
+        return;
+      }
+      if (productList.length >= productListTotal) {
+        Taro.showToast({
+          title: "已经到底了",
+          icon: "none"
+        });
+        return;
+      }
+      this.setState({loading: true});
+    }
+      
+    // 显示loading，加载数据
+    Taro.showLoading();
+    let payload: ProductInterface.ProductInfoListFetchFidle = {
+      pageNum: page || pageNum,
+      pageSize,
+      orderByColumn : 'number desc'
+    };
+    const { success, result } = await ProductAction.productInfoList(payload);
+    Taro.hideLoading();
+    invariant(success, result || ResponseCode.error);
+    
+    // 修改page、state
+    pageNum = (page || pageNum) + 1
+    this.setState({
+      refreshing: false,
+      loading: false
+    })
+      
+  } catch (error) {
+    this.setState({
+      refreshing: false,
+      loading: false,
+    })
+    Taro.hideLoading();
+    Taro.showToast({
+      title: error.message,
+      icon: "none"
+    });
+  }
+};
+
+```
+
+
+
+### 表单校验
+
+封装了一个类用于校验，下面讲一下如何使用
+
+```tsx
+import Validator from "@pages/common/util/validator";
+
+// 创建实例
+const help = new Validator();
+
+// 新增校验项
+help.add(name, [
+  {
+    strategy: "isEmpty",
+    errorMsg: "不允许为空"
+  },
+  {
+    strategy: "isNumber",
+    errorMsg: "不是数字"
+  }
+]);
+
+// 执行校验，拿到错误信息
+const error = help.start();
+```
+
+
+
+
+
+### 订单状态
+
+这里说明如何确定订单的状态。
+
+订单状态由交易状态、物流状态、售后状态三个字段决定。
+
+这里的订单状态使用到的模块包括查账模块、线上订单模块。
+
+注意：如果用户撤销或者商家拒绝需要回到上一次的订单状态。
+
+获取订单状态的方法：
+
+- 售后状态为2、3、5、6、7显示上一次的订单状态
+- 售后状态为6时，目前先回到上一次的订单状态。如果考虑C端小程序的单，要修改逻辑
+
+```tsx
+public orderStatus = (
+  orderAllStatus: any[],
+  params: OrderInterface.OrderDetail,
+): {title: string, type: string, detail: string, id: number, status: boolean} => {
+  const { order } = params;
+  const obj = this.getAfterSaleStatus(
+    order.afterSaleStatus,
+    order.deliveryStatus,
+    order.transFlag
+  );
+  return obj;
+};
+
+getListItem = (value: string | undefined, list: any[] = []) => {
+  if(!value) {
+    return undefined
+  }
+  const res = list.find((item: any) => item.dictValue === value)
+  return res
+}
+
+getAfterSaleStatus = (afterSaleStatus, deliveryStatus, transFlag) => {
+  const res = this.getListItem(afterSaleStatus, AFTER_SALE_STATUS)
+  if(!res) {
+    return this.getDeliveryStatus(deliveryStatus, transFlag)
+  }
+  return {
+    type: 'AFTER_SALE_STATUS',
+    title: res && res.dictLabel || '',
+    id: res && res.dictValue || -1,
+    detail: '',
+    status: res && res.status || false
+  };
+};
+
+getDeliveryStatus = (deliveryStatus, transFlag) => {
+  const res = this.getListItem(deliveryStatus, DELIVERY_STATUS)
+  if(!res) {
+    return this.getTransFlag(transFlag)
+  }
+  return {
+    type: "delivery_status",
+    title: res && res.dictLabel || '',
+    id: res && res.dictValue || -1,
+    detail: '',
+    status: res && res.status || false
+  };
+};
+
+getTransFlag = (transFlag) => {
+  const res = this.getListItem(transFlag, TRANS_FLAG)
+  // 如果没找到就后面的默认值
+  return {
+    type: '',
+    title: res && res.dictLabel || '',
+    id: res && res.dictValue || -1,
+    detail: '',
+    status: res && res.status || false
+  }
+};
+
+// 交易状态	trans_flag
+export const TRANS_FLAG = [
+  {
+    dictValue: -1,
+    dictLabel: "支付失败",
+    detail: "请重新下单",
+    status: false
+  },
+  {
+    dictValue: -2,
+    dictLabel: "订单异常",
+    detail: "订单异常",
+    status: false
+  },
+  {
+    dictValue: 0,
+    dictLabel: "待支付",
+    detail: "",
+    status: false
+  },
+  {
+    dictValue: 1,
+    dictLabel: "支付完成",
+    detail: "支付完成",
+    status: false
+  },
+  {
+    dictValue: 2,
+    dictLabel: "交易关闭",
+    detail: "该订单已关闭",
+    status: false
+  },
+  {
+    dictValue: 3,
+    dictLabel: "交易完成",
+    detail: "订单已完成",
+    status: true
+  },
+  {
+    dictValue: 4,
+    dictLabel: "交易取消",
+    detail: "交易取消",
+    status: false
+  },
+  {
+    dictValue: 5,
+    dictLabel: "支付中",
+    detail: "支付中",
+    status: false
+  }
+];
+
+// 配送状态 delivery_status
+export const DELIVERY_STATUS = [
+  {
+    dictValue: 0,
+    dictLabel: "待发货",
+    detail: "",
+    status: false
+  },
+  {
+    dictValue: 1,
+    dictLabel: "待自提",
+    detail: "",
+    status: false
+  },
+  {
+    dictValue: 2,
+    dictLabel: "待收货",
+    detail: "",
+    status: false
+  },
+  // {
+  //   dictValue: 3,
+  //   dictLabel: "配送完成",
+  //   detail: "",
+  //   status: false
+  // },
+];
+
+// 售后状态 after_sale_status
+export const AFTER_SALE_STATUS = [
+  {
+    dictValue: 0,
+    dictLabel: "申请取消订单",
+    detail: "",
+    status: false
+  },
+  {
+    dictValue: 1,
+    dictLabel: "申请退货",
+    detail: "",
+    status: false
+  },
+  // {
+  //   dictValue: 2,
+  //   dictLabel: "用户撤销取消订单",
+  //   detail: "",
+  //   status: false,
+  // },
+  // {
+  //   dictValue: 3,
+  //   dictLabel: "买家取消退货",
+  //   detail: "",
+  //   status: false
+  // },
+  {
+    dictValue: 4,
+    dictLabel: "退货退款中",
+    detail: "",
+    status: false
+  },
+  // {
+  //   dictValue: 5,
+  //   dictLabel: "卖家拒绝退货",
+  //   detail: "",
+  //   status: false
+  // },
+  // {
+  //   dictValue: 6,
+  //   dictLabel: "交易完成",
+  //   detail: "已退货",
+  //   status: true
+  // },
+  // {
+  //   dictValue: 7,
+  //   dictLabel: "拒绝取消订单",
+  //   detail: "",
+  //   status: false
+  // },
+];
+```
+
+
+
+以下为决定订单状态的三个字段：
+
+- 售后状态 after_sale_status
+
+  | 名称             | 值   |
+  | ---------------- | ---- |
+  | 申请取消         | 0    |
+  | 申请退货         | 1    |
+  | 用户撤销取消订单 | 2    |
+  | 用户撤销退货     | 3    |
+  | 退款中           | 4    |
+  | 拒绝退款         | 5    |
+  | 已退款           | 6    |
+  | 拒绝取消订单     | 7    |
+
+- 配送状态 delivery_status
+
+  | 名称     | 值   |
+  | -------- | ---- |
+  | 待发货   | 0    |
+  | 待自提   | 1    |
+  | 待收货   | 2    |
+  | 配送完成 | 3    |
+
+- 交易状态 trans_flag
+
+  | 名称       | 值   | 描述                                 |
+  | ---------- | ---- | ------------------------------------ |
+  | 订单异常   | -2   |                                      |
+  | 支付失败   | -1   |                                      |
+  | 待买家付款 | 0    | 初始化/待支付                        |
+  | 已完成     | 1    | 与3的区别为 1是支付完成，3是订单完成 |
+  | 交易关闭   | 2    |                                      |
+  | 订单完成   | 3    |                                      |
+  | 交易取消   | 4    |                                      |
+  | 支付中     | 5    |                                      |
+
+
+
+
+
+## 组件
+
+### card组件
+
+主要是数据展示，也支持form表单填写，目前只支持input
+
+想要对card进行样式调整，传入对应样式属性就可以了
+
+```tsx
+import FormCard from '@/pages/component/card/form.card'
+const priceForm: FormRowProps[] = [
+  // 普通展示
+  {
+    title: '应付金额',
+    extraText: `￥${this.setNumber(productSdk.getProductTransPrice())}`,
+    extraTextColor: '#333333',
+    extraTextBold: 'bold',
+    extraTextSize: '36',
+  },
+  // input表单
+  {
+    title: "名称",
+    main: true,
+    isInput: true,
+    inputValue: name,
+    inputOnChange: value => this.onChangeValue("name", value),
+    inputPlaceHolder: "请输入商品名称",
+    maxInput: true,
+    hasBorder: false
+  }
+];
+<FormCard items={priceForm} />
+```
+
+如果card比较复杂，想要单独渲染一行card元素的样式，比如在这一行外部套入picker，点击行可以进行选择。参考代码：
+
+```tsx
+import FormRow from '@/pages/component/card/form.row'
+<Picker
+  mode="selector"
+  range={productSupplierSelector}
+  onChange={this.changeProductSupplier}
+  value={supplierValue}
+>
+  <FormRow
+    title="供应商"
+    extraText={''}
+    arrow="right"
+  />
+</Picker>
+```
+
+
+
+### 搜索组件
+
+HeaderInput组件传入的参数主要是input框以及两边元素按钮（比如删除按钮、扫码按钮）的显示，如果右边想要额外的渲染，写到props.children里就可以了
+
+```tsx
+import HeaderInput from '@/pages/component/header/header.input';
+
+<HeaderInput
+  className="inventory-input"
+  placeholder="请输入商品名称或条码"
+  value={searchValue}
+  onInput={this.onInput}
+  isRenderInputRight={true}
+  inputRightClick={() => {}}
+  isRenderScan={false}
+  scanClick={() => {}}
+>
+  <View
+    className={"inventory-header-item"}
+    onClick={() => this.onNavToList()}
+  >
+    进货记录
+  </View>
+</HeaderInput>
+```
+
+
+
+### Tab组件
+
+这个是横向的tab组件，需要传入类型列表和点击事件，样式为button的样式，主要用于商品分类分类筛选
+
+竖向的参考退货等页面。
+
+```tsx
+import TabsHeader from '@/pages/component/layout/tabs.header';
+<TabsHeader
+  tabs={typeList}
+  onChange={type => this.onTypeChange(type)}
+/>
+```
+
+线上订单的tab组件，横向，和上面的tab组件组别在于，两个样式会不一样，其次是这个组件不能滑动，建议个数在5个或以下。
+
+```tsx
+import TabsHeader from '@/pages/component/tabs/tabs.switch';
+<TabsSwitch  
+  current={currentType}
+  tabs={orderTypes}
+  onChangeTab={this.onChangeTab}
+/>
+```
+
+
+
+### 商品组件
+
+需要注意的是这里的sort字段，是哪个页面使用的此组件，就传入对应的值
+
+这里是sort可选的值：
+
+```tsx
+type PAYLOAD_SORT = {
+  PAYLOAD_ORDER: PAYLOAD_ORDER;			// 开单
+  PAYLOAD_REFUND: PAYLOAD_REFUND;		// 退货
+  PAYLOAD_PURCHASE: PAYLOAD_PURCHASE;	// 采购进货
+  PAYLOAD_MANAGE: PAYLOAD_MANAGE;		// 商品管理
+  PAYLOAD_STOCK: PAYLOAD_STOCK;			// 盘点
+};
+```
+
+一共封装了两个商品列表，区别在于：ProductListView主要用于展示全部商品，可进行加入购物车等操作，每个模块根据sort加入对应的购物车。而ProductPayListView则是根据已有商品列表渲染商品，每个模块的展示页面根据sort显示对应的页面。
+
+```tsx
+// 组件1
+import { ProductListView } from '@/pages/component/product/product.listView'
+<ProductListView
+  page={pageNum}  
+  loading={loading}
+  productList={productList}
+  productListTotal={productListTotal}
+  className={''}
+  sort={productSdk.reducerInterface.PAYLOAD_SORT.PAYLOAD_PURCHASE}
+  onScrollToLower={this.loadMore}
+  isRenderFooter={false}// 是否显示列表结束语
+  bottomSpector={true}
+/>
+```
+
+```tsx
+// 组件2
+import { ProductPayListView } from '@/pages/component/product/product.pay.listView'
+<ProductPayListView
+  padding={false}
+  sort={productSdk.reducerInterface.PAYLOAD_SORT.PAYLOAD_PURCHASE}
+  productList={productList}
+/>
+```
+
+
+
+### 购物车组件
+
+sort代表是哪个页面的购物车，所对应的值参考商品组件
+
+```tsx
+<CartBar
+  sort={productSdk.reducerInterface.PAYLOAD_SORT.PAYLOAD_PURCHASE}
+/>
+```
+
+
+
+### modal弹框
+
+- 普通弹框
+
+  主要用于修改库存、选择固定数量至购物车等等。
+
+  支持表单写入数据，写入`inputs属性`即可，配合按钮 `buttons属性` 搭配使用。
+
+  ```tsx
+  import Modal from "@/component/modal/modal";
+  
+  const nonBarcodeInputs: ModalInput[] = [
+    {
+      title: "价格",
+      prefix: "￥",
+      value: nonBarcodePrice,
+      onInput: ()=>{},
+      placeholder: "请输入商品价格"
+    },
+    {
+      title: "备注",
+      value: nonBarcodeRemark,
+      onInput: ({ detail: { value } }) =>
+        this.onChangeValue("nonBarcodeRemark", value),
+      placeholder: "请输入备注信息"
+    }
+  ];
+  
+  const buttons = [
+    {
+      title: "取消",
+      type: "cancel",
+      onPress: () => this.onNonBarcodeClose()
+    },
+    {
+      title: "确定",
+      type: "confirm",
+      onPress: () => this.onNonBarcodeConfirm()
+    }
+  ];
+  
+  const isOpen =
+    nonBarcodeProduct !== undefined &&
+    typeof nonBarcodeProduct.id === "string";
+  
+  <Modal
+    isOpened={isOpen}
+    header={"无码商品"}
+    onClose={() => this.onNonBarcodeClose()}
+    buttons={buttons}
+    inputs={nonBarcodeInputs}
+  />
+  ```
+
+- 底部弹框
+
+  这个组件主要用于筛选、以及数据的显示（参考数据模块），渲染内容需要写在这个组件的标签中间。
+
+  筛选组件需要搭配按钮使用。
+
+  ```tsx
+  import { ModalLayout } from '@/component/layout/modal.layout'
+  
+  <ModalLayout 
+    visible={visible}
+    onClose={() => this.onChangeValue("visible", false)}
+    contentClassName={``}
+    title="筛选"
+    buttons={[
+      { title: "重置", onPress: () => this.reset(), type: "cancel" },
+      {
+        title: "确定",
+        onPress: () => {
+          this.onChangeValue("visible", false);
+          this.fetchData(1);
+        }
+      }
+    ]}
+  >
+    <View>内容。。。</View>
+  </ModalLayout>
+  ```
+
+
+
+## 经验
+
+1. 如果`编译`完成后，如果控制台报错dispatch，保存app.tsx即可解决
+
+   `打包`同理，只不过`打包`要复制`编译`完成后的app.js文件
+   
+2. 收款页面
+
+   进入此页面，后台已经在查询支付结果，有了明确支付结果展示结果页
+
+   但是，如果我们很快就退出收款页面，这时候就不应该再显示结果页了
+
+   方案：在退出页面时将订单号保存在redux中，然后当拿到支付结果时，就进行判断此单号是不是已经退出收款页面了
+
+   ```tsx
+   componentWillUnmount() {
+     const { payDetail } = this.props;
+     // 退出的订单保存到redux中
+     store.dispatch({
+       type: ProductInterfaceMap.reducerInterfaces.RECEIVE_PAY_ORDERRNO,
+       payload: (payDetail.transResult as ProductInterface.CashierPay).orderNo
+     });
+   }
+   
+   
+   // 如果退出的订单号中包含此订单，不执行
+   if(this.props.orderNo.indexOf(payload.orderNo) !== -1) {
+     return
+   }
+   ```
+
+3. render开头的函数，需要把this.state解构出来使用
+
+   比如：`const {random} = this.state`
