修改：初步修改线上订单模块

--- a/doc/项目文档.md
+++ b/doc/项目文档.md
@@ -174,206 +174,116 @@ const error = help.start();
 
 这里的订单状态使用到的模块包括查账模块、线上订单模块。
 
-注意：如果用户撤销或者商家拒绝需要回到上一次的订单状态。
-
-获取订单状态的方法：
-
-- 售后状态为2、3、5、6、7显示上一次的订单状态
-- 售后状态为6时，目前先回到上一次的订单状态。如果考虑C端小程序的单，要修改逻辑
-
 ```tsx
-public orderStatus = (
-  orderAllStatus: any[],
-  params: OrderInterface.OrderDetail,
-): {title: string, type: string, detail: string, id: number, status: boolean} => {
-  const { order } = params;
-  const obj = this.getAfterSaleStatus(
-    order.afterSaleStatus,
-    order.deliveryStatus,
-    order.transFlag
-  );
-  return obj;
+// 获取订单状态
+
+getListItem = (value, list) => {
+  if (typeof value !== "number") {
+    return undefined;
+  }
+  const res = list.find((item) => item.id === value);
+  return res;
 };
 
-getListItem = (value: string | undefined, list: any[] = []) => {
-  if(!value) {
-    return undefined
-  }
-  const res = list.find((item: any) => item.dictValue === value)
-  return res
-}
-
-getAfterSaleStatus = (afterSaleStatus, deliveryStatus, transFlag) => {
-  const res = this.getListItem(afterSaleStatus, AFTER_SALE_STATUS)
-  if(!res) {
-    return this.getDeliveryStatus(deliveryStatus, transFlag)
+getAfterSaleStatus = (afterSaleStatus) => {
+  const res = this.getListItem(afterSaleStatus, AFTER_SALE_STATUS);
+  if (!res) {
+    return null;
   }
   return {
-    type: 'AFTER_SALE_STATUS',
-    title: res && res.dictLabel || '',
-    id: res && res.dictValue || -1,
-    detail: '',
-    status: res && res.status || false
+    type: "after_sale_status",
+    ...res,
   };
 };
 
-getDeliveryStatus = (deliveryStatus, transFlag) => {
-  const res = this.getListItem(deliveryStatus, DELIVERY_STATUS)
-  if(!res) {
-    return this.getTransFlag(transFlag)
+getDeliveryStatus = (deliveryStatus) => {
+  const res = this.getListItem(deliveryStatus, DELIVERY_STATUS);
+  if (!res) {
+    return null;
   }
   return {
     type: "delivery_status",
-    title: res && res.dictLabel || '',
-    id: res && res.dictValue || -1,
-    detail: '',
-    status: res && res.status || false
+    ...res,
   };
 };
 
 getTransFlag = (transFlag) => {
-  const res = this.getListItem(transFlag, TRANS_FLAG)
-  // 如果没找到就后面的默认值
-  return {
-    type: '',
-    title: res && res.dictLabel || '',
-    id: res && res.dictValue || -1,
-    detail: '',
-    status: res && res.status || false
+  const res = this.getListItem(transFlag, TRANS_FLAG);
+  if (!res) {
+    return null;
   }
+  return {
+    type: "trans_flag",
+    ...res,
+  };
 };
 
-// 交易状态	trans_flag
-export const TRANS_FLAG = [
-  {
-    dictValue: -1,
-    dictLabel: "支付失败",
-    detail: "请重新下单",
-    status: false
-  },
-  {
-    dictValue: -2,
-    dictLabel: "订单异常",
-    detail: "订单异常",
-    status: false
-  },
-  {
-    dictValue: 0,
-    dictLabel: "待支付",
-    detail: "",
-    status: false
-  },
-  {
-    dictValue: 1,
-    dictLabel: "支付完成",
-    detail: "支付完成",
-    status: false
-  },
-  {
-    dictValue: 2,
-    dictLabel: "交易关闭",
-    detail: "该订单已关闭",
-    status: false
-  },
-  {
-    dictValue: 3,
-    dictLabel: "交易完成",
-    detail: "订单已完成",
-    status: true
-  },
-  {
-    dictValue: 4,
-    dictLabel: "交易取消",
-    detail: "交易取消",
-    status: false
-  },
-  {
-    dictValue: 5,
-    dictLabel: "支付中",
-    detail: "支付中",
-    status: false
+orderStatus = (r, orderDetail: any = {}) => {
+  const transFlag = orderDetail.order && orderDetail.order.transFlag;
+  const deliveryStatus =
+    orderDetail.order && orderDetail.order.deliveryStatus;
+  const afterSaleStatus =
+    orderDetail.order && orderDetail.order.afterSaleStatus;
+  // 如果只有交易状态显示交易状态
+  if (
+    typeof deliveryStatus !== "number" &&
+    typeof afterSaleStatus !== "number"
+  ) {
+    const status = this.getTransFlag(transFlag);
+    if (status) {
+      return { ...status };
+    }
   }
-];
 
-// 配送状态 delivery_status
-export const DELIVERY_STATUS = [
-  {
-    dictValue: 0,
-    dictLabel: "待发货",
-    detail: "",
-    status: false
-  },
-  {
-    dictValue: 1,
-    dictLabel: "待自提",
-    detail: "",
-    status: false
-  },
-  {
-    dictValue: 2,
-    dictLabel: "待收货",
-    detail: "",
-    status: false
-  },
-  // {
-  //   dictValue: 3,
-  //   dictLabel: "配送完成",
-  //   detail: "",
-  //   status: false
-  // },
-];
+  // 如果只有交易和物流显示物流
+  if (typeof afterSaleStatus !== "number") {
+    const status = this.getDeliveryStatus(deliveryStatus);
+    if (status) {
+      return { ...status };
+    }
+  }
 
-// 售后状态 after_sale_status
-export const AFTER_SALE_STATUS = [
-  {
-    dictValue: 0,
-    dictLabel: "申请取消订单",
-    detail: "",
-    status: false
-  },
-  {
-    dictValue: 1,
-    dictLabel: "申请退货",
-    detail: "",
-    status: false
-  },
-  // {
-  //   dictValue: 2,
-  //   dictLabel: "用户撤销取消订单",
-  //   detail: "",
-  //   status: false,
-  // },
-  // {
-  //   dictValue: 3,
-  //   dictLabel: "买家取消退货",
-  //   detail: "",
-  //   status: false
-  // },
-  {
-    dictValue: 4,
-    dictLabel: "退货退款中",
-    detail: "",
-    status: false
-  },
-  // {
-  //   dictValue: 5,
-  //   dictLabel: "卖家拒绝退货",
-  //   detail: "",
-  //   status: false
-  // },
-  // {
-  //   dictValue: 6,
-  //   dictLabel: "交易完成",
-  //   detail: "已退货",
-  //   status: true
-  // },
-  // {
-  //   dictValue: 7,
-  //   dictLabel: "拒绝取消订单",
-  //   detail: "",
-  //   status: false
-  // },
-];
+  // 售后的三种情况直接显示
+  if ([0, 1, 4].indexOf(afterSaleStatus) !== -1) {
+    const status = this.getAfterSaleStatus(afterSaleStatus);
+    if (status) {
+      return { ...status };
+    }
+  }
+
+  // 售后其他情况状态显示上一次的订单状态，描述显示售后的
+  let status;
+  if (transFlag === 1) {
+    status = this.getDeliveryStatus(deliveryStatus);
+  }
+
+  if (transFlag === 2) {
+    status = {
+      type: "trans_flag",
+      id: 2,
+      title: "交易关闭",
+      detail: "该订单已关闭",
+      status: false,
+      bg: "cancel",
+    };
+  }
+
+  if (transFlag === 3) {
+    status = {
+      type: "trans_flag",
+      id: 3,
+      title: "交易完成",
+      detail: "订单已完成",
+      status: true,
+      bg: "complete",
+    };
+  }
+
+  const { detail } = this.getAfterSaleStatus(afterSaleStatus);
+  if (status) {
+    return { ...status, detail };
+  }
+};
 ```
 
 
@@ -404,16 +314,16 @@ export const AFTER_SALE_STATUS = [
 
 - 交易状态 trans_flag
 
-  | 名称       | 值   | 描述                                 |
-  | ---------- | ---- | ------------------------------------ |
-  | 订单异常   | -2   |                                      |
-  | 支付失败   | -1   |                                      |
-  | 待买家付款 | 0    | 初始化/待支付                        |
-  | 已完成     | 1    | 与3的区别为 1是支付完成，3是订单完成 |
-  | 交易关闭   | 2    |                                      |
-  | 订单完成   | 3    |                                      |
-  | 交易取消   | 4    |                                      |
-  | 支付中     | 5    |                                      |
+  | 名称       | 值   |
+  | ---------- | ---- |
+  | 订单异常   | -2   |
+  | 支付失败   | -1   |
+  | 待买家付款 | 0    |
+  | 支付完成   | 1    |
+  | 交易关闭   | 2    |
+  | 订单完成   | 3    |
+  | 交易取消   | 4    |
+  | 支付中     | 5    |
 
 
 
@@ -695,13 +605,12 @@ sort代表是哪个页面的购物车，所对应的值参考商品组件
      });
    }
    
-   
    // 如果退出的订单号中包含此订单，不执行
    if(this.props.orderNo.indexOf(payload.orderNo) !== -1) {
      return
    }
    ```
-
+   
 3. render开头的函数，需要把this.state解构出来使用
 
    比如：`const {random} = this.state`
