--- a/doc/项目文档.md
+++ b/doc/项目文档.md
@@ -404,7 +404,7 @@ import HeaderInput from '@/pages/component/header/header.input';
     className={"inventory-header-item"}
     onClick={() => this.onNavToList()}
   >
-    进货记录
+    收货记录
   </View>
 </HeaderInput>
 ```
@@ -448,7 +448,7 @@ import TabsHeader from '@/pages/component/tabs/tabs.switch';
 type PAYLOAD_SORT = {
   PAYLOAD_ORDER: PAYLOAD_ORDER;			// 开单
   PAYLOAD_REFUND: PAYLOAD_REFUND;		// 退货
-  PAYLOAD_PURCHASE: PAYLOAD_PURCHASE;	// 采购进货
+  PAYLOAD_PURCHASE: PAYLOAD_PURCHASE;	// 采购收货
   PAYLOAD_MANAGE: PAYLOAD_MANAGE;		// 商品管理
   PAYLOAD_STOCK: PAYLOAD_STOCK;			// 盘点
 };
